--- a/create.html
+++ b/create.html
@@ -62,17 +62,15 @@
       border-radius: 6px;
     }
 
-    button {
+    .back-container {
+      text-align: center;
       margin-top: 20px;
-      width: 100%;
-      padding: 12px;
-      border: none;
-      background: #1b4332;
-      color: white;
-      font-size: 16px;
-      border-radius: 6px;
-      cursor: pointer;
     }
+
+    .back-btn {
+      display: inline-block;
+}
+
 
     button:hover {
       background: #40916c;
@@ -103,6 +101,7 @@
   </div>
 <div class="back-container">
   <a href="dashboard.html" class="back-btn">⬅ Back to Menu</a>
+ 
 </div>
 
 
